# rust-xp-ai-function

./: .env  Cargo.toml  rustfmt.toml
examples/: c01-chat.rs  c02-tool-calls.rs  c03-tool-responses.rs  c04-conv.rs  c05-schema.rs
src/: chat.rs  conv.rs  error.rs  gpts.rs  lib.rs  oa_client.rs
src/tools/: ai_tools.rs  spec.rs  weather.rs
