[package]
name = "xp-ai-function"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = { version = "0.32.3", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
# -- Router
rpc-router = "0.1.3"
# -- Json Schema
schemars = {version = "1.2"}
# -- Others
derive_more = {version = "2.1", features = ["from", "display"] }
dotenv = "0.15"